<resources>
    <string name="app_name">social_media</string>
    <string name="hello">Hello there, Welcome Back</string>
    <string name="sign_in_to_continue">Sign In To Continue</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="don_t_hav">Don\'t have an account? Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_Up">sign_up</string>
    <string name="don_t_ha">"if u not signup,please sign up "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="his_name">His Name</string>
    <string name="online">online</string>
</resources>