<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#fff"
    android:padding="10dp"
    tools:context=".LogActivity">
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textSize="20sp"
        android:text="@string/hello"
        android:textColor="#17CAE1">
    </TextView>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/sign_in_to_continue"
        android:layout_below="@+id/textView1"
        android:textSize="18sp">

    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="20dp"
        android:orientation="vertical"

        >

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailLayout"
      >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailET"
            android:hint="@string/email"
            android:singleLine="true"
            android:inputType="textEmailAddress"

            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordET"
            android:hint="@string/password"
            android:inputType="textPassword"

            />

    </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="16sp"
            android:id="@+id/signinBtn"
            android:layout_marginTop="20sp"
            android:textColor="#17CAE1" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/googlelogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        </com.google.android.gms.common.SignInButton>
        <TextView
            android:id="@+id/forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Password?Please Click."
            android:layout_gravity="center"
            android:textSize="12dp"
            ></TextView>


        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="36dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"></ProgressBar>


            <TextView
            android:id="@+id/signupTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/don_t_hav"

            android:textSize="16sp"
            android:gravity="center_horizontal"
             />





    </LinearLayout>
</RelativeLayout>